Including new version of mongodb person attributes support

--- a/person-directory-impl/pom.xml
+++ b/person-directory-impl/pom.xml
@@ -201,6 +201,11 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>1.50.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
     <properties>
